# pygame-ttt

./: pyproject.toml
src/ttt/: __init__.py  core.py  game.py  interface.py
