[project]
name = "ttt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey04", email = "mycyberpet@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "structlog>=25.4.0",
]

[project.scripts]
ttt = "ttt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
